# UND-CSCI532

./: README.md
Assignment/532 Assignment 1   (MPI  1)/9.18 reviewing the code/: gettimeofday().txt  int argc char argv in c.txt  memset().txt  struct timeval linux.txt
Assignment/532 Assignment 1   (MPI  1)/9.21 morning study/: #include glglew.h ^ compilation terminated visualizer.txt  fatal error mpi.h No such file or directory #include mpi.h.txt  mpicc command not found.txt  openmpi installation.txt  unable to locate package opengl.txt
Assignment/532 Assignment 1   (MPI  1)/ass1/: CMakeLists.txt  README  kmeans.c
Assignment/532 Assignment 1   (MPI  1)/ass1-0918/: CMakeLists.txt  README  kmeans_non_mpi.c
Assignment/532 Assignment 2   (MPI   2)/10.10 532 class and read Liboushi code/: MPI function exam questions.txt  find.txt  how to run mpi program in linux.txt  rehash.txt  substr.txt  unordered_map.txt
Assignment/532 Assignment 2   (MPI   2)/Liuboshi/: ERR192338.fastq  compile_ass2.sh  main.cpp  run_ass2.sh
Assignment/532 Assignment 3   (MPI   3)/11.2 532 morning study/: atoi().txt  setprecision().txt  setw().txt  uint32_t.txt
Assignment/532 Assignment 3   (MPI   3)/Liuboshi/: heat_diffusion1.cxx  heat_diffusion2.cxx
Assignment/532 Assignment 3   (MPI   3)/ass3/: compile_ass3.sh  compile_ass3_valid.sh  heat_diffusion.cxx  heat_diffusion_mpi.cxx  readme.txt  run_ass3_valid.sh
Assignment/532 Assignment 3   (MPI   3)/ass3  (old)/: heat_diffusion_mpi.cxx  run_ass3.sh  run_ass3_valid.sh
Assignment/532 Assignment 4 (CUDA 1)/: Table.xlsx  convolution_gpu.cxx  kernel(original).cu  readme.txt
Assignment/532 Assignment 4 (CUDA 1)/12.6 how to install cuda/: how to install cuda.txt
Assignment/532 Assingment 5 (OpenCL 2)/: Bonus (compare the performance).docx
Assignment/532 Assingment 5 (OpenCL 2)/12.10 532 study  scp success/: Reason   -P is capital.txt
Assignment/532 Assingment 5 (OpenCL 2)/12.10 evening 532 study/: tile approach matrix multiplication.txt  tiled size opencl   2d matrix multiply.txt
Assignment/532 Assingment 5 (OpenCL 2)/liuboshi/opencl_matrix_multiply/: Bonus (compare the performance).docx  CMakeLists.txt  README.md  matrix_multiply.cl  matrix_op.cpp
Class material 2017 fall/: auto-compiler-vect.pptx  using_hodor.pptx
Class material 2017 fall/CUDA+OpenCL class slides (after midterm)/: vector_sum.readme  vector_sum_gpu.cu
Class material 2017 fall/MPI-Part 1/: mpi_bcast_example.cpp  mpi_hello.cpp  mpi_process_ring.cpp  mpi_scatterv_gatherv_example.cpp
Class material 2017 fall/MPI-Part 2/: mpi_allgather_example.cpp  mpi_reduce_example.cpp
Class material 2017 fall/MPI-Part 4/: mpi_asynch_busy_process_ring.cpp  mpi_asynch_mw.cpp  mpi_asynch_process_ring.cpp  unordered_map_test.cpp
Lab machine/Assign1/: 2.cpp  CMakeLists.txt  example  example.cpp  test
Lab machine/Assign1/final/ass1/: README  run_kmeans_mpi.sh  run_kmeans_non_mpi.sh
Lab machine/Assign4/: ass4  conv  cuda  kernel  kernel.cu  readme.txt  test  test2  test3  vecto_sum_gpu  vector_sum_gpu_v2.cu  vector_sum_gpu_v3.cu
Lab machine/opencl_matrix_add/opencl_matrix_add/: CMakeLists.txt  matrix_add.cxx  matrix_add_kernel.cl  opencl_utils.cxx
(+64 files in other folders)
